API Enchancements
